IBX-8754: Fixed label spacing for content type fields options (#1640)

--- a/src/bundle/Resources/public/scss/_content-type-edit.scss
+++ b/src/bundle/Resources/public/scss/_content-type-edit.scss
@@ -51,7 +51,7 @@
 
     &__section-column-body {
         .form-check {
-            margin-top: calculateRem(16px);
+            margin-bottom: calculateRem(16px);
 
             .ibexa-label {
                 margin-bottom: 0;
